--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./project.css" />
 </head>
 
 <body>
@@ -18,13 +18,13 @@
             </div>
 
             <div class="nav-buttons">
-                <button class="home">
+                <button>
                     <p>Home</p>
                 </button>
-                <button class="home">
+                <button>
                     <p>About us</p>
                 </button>
-                <button class="home">
+                <button>
                     <p>How it works</p>
                 </button>
                 <button class="get-started">
@@ -40,27 +40,19 @@
                     with the best companies — just share your CV to get started.
                 </p>
                 <button class="context-button">
-                    <p class="context-button-text">How It Works?</p>
+                    <p>How It Works?</p>
                 </button>
             </div>
             <div class="content-image">
-                <div class="content-image1">
-                    <img alt="arrow" src="./assets/fire 1.png" />
-                </div>
-                <div class="content-image2">
-                    <img alt="arrow" src="./assets/dollar 1.png" />
-                </div>
-                <div class="content-image3">
-                    <img alt="arrow" src="./assets/image 4.png" />
-                </div>
+                <img alt="arrow" src="./assets/image 4.png" />
             </div>
         </div>
     </section>
     <section class="section-about">
         <div class="info-block">
             <div class="info">
-                <p>Lorem Ipsum Description Text</p>
-                <h1>How It Works?</h1>
+                <p class="lorem">Lorem Ipsum Description Text</p>
+                <h1 class="title2">How It Works?</h1>
             </div>
             <div class="frame-block">
                 <div class="frame">
@@ -82,60 +74,61 @@
         </div>
     </section>
     <section class="cv-submission">
-        <div>
-            <h1>Lets Get Started</h1>
-            <p>The best tool to start your career journey with.
+        <div class="cv">
+            <h1 class="title3">Lets Get Started</h1>
+            <p class="cv-about">The best tool to start your career journey with.
                 Get connected with the best companies — just share your CV to get started.</p>
-            <div>
-                <p>
-                    <input placeholder="Search for job by keywords">
+            <div class="findjob-button">
+                <p class="search">
+                    <img src="./assets/Search.png">
+                    <input class="placeholder" placeholder="Search for job by keywords">
                 </p>
                 <button class="find-job">
                     <p>Find Job</p>
                 </button>
             </div>
         </div>
-        <div class="content-cv">
-            <div class="content-texts">
-                <div class="content-image">
-                    <img alt="arrow" src="./assets/image 5.png" />
-                </div>
-                <h1>Upload your CV</h1>
+    </section>
+    <section class="section-upload-cv">
+        <div class="cv-block">
+            <div class="upload-image">
+                <img alt="arrow" src="./assets/image 5.png" />
+            </div>
+            <div class="upload-cv">
+                <h1 class="upload-title">Upload your CV</h1>
                 <p>
                     The best tool to start your career journey with. Get connected
                     with the best companies — just share your CV to get started.
                 </p>
-                <button>
-                    <img alt="arrow" src="./assets/Upward Arrow.png" />
-                    <p class="context-button">Upload</p>
+                <button class="upload-button">
+                    <p class="upload-button-image"><img alt="arrow" src="./assets/Upward Arrow.png" /></p>
+                    <p class="upload-button-text">Upload</p>
                 </button>
             </div>
+
         </div>
     </section>
     <script src="./index.js"></script>
 </body>
 <footer>
-    <section>
-        <div>
-            <ul class="nav-menu">
+    <div class="footer-section">
+        <div class="footer-frame">
+            <ul class="footer-menu">
                 <li>Home</li>
-                <li>Product</li>
-                <li>Contact</li>
+                <li>About us</li>
+                <li>How it works</li>
                 <li><img alt="arrow" src="./assets/Twitter.png" /></li>
                 <li><img alt="arrow" src="./assets/Instagram.png" /></li>
             </ul>
-        </div>
-        <div>
-            <button>
+            <div class="footer-credits-button">
                 <p>Credits: photos from Unsplash.com, icons from Icons8,
                     graphics from craftwork.design, font Kanit from fonts.google.</p>
-            </button>
-
+            </div>
         </div>
-        <button>
+        <div class="footer-made">
             <p>Made with ✨❤️ at nFactorial in 2023.</p>
-        </button>
-    </section>
+        </div>
+    </div>
 </footer>
 
 </html>
