create mobile version(Project 2) in project.css

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             </div>
 
             <div class="nav-buttons">
-                <button>
+                <button class="object">
                     <p>Home</p>
                 </button>
-                <button>
+                <button class="object">
                     <p>About us</p>
                 </button>
-                <button>
+                <button class="object">
                     <p>How it works</p>
                 </button>
                 <button class="get-started">
@@ -96,7 +96,7 @@
             </div>
             <div class="upload-cv">
                 <h1 class="upload-title">Upload your CV</h1>
-                <p>
+                <p class="upload-description">
                     The best tool to start your career journey with. Get connected
                     with the best companies — just share your CV to get started.
                 </p>
@@ -105,7 +105,6 @@
                     <p class="upload-button-text">Upload</p>
                 </button>
             </div>
-
         </div>
     </section>
     <script src="./index.js"></script>
